# Virtual-Webcam-Chatbot

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  README_COPILOT.md  VoiceRecognition.ipynb  notebook.ipynb  pyproject.toml  v1.ipynb  v2-Copy1.ipynb  v2.ipynb
.ipynb_checkpoints/: notebook-checkpoint.ipynb  v1-checkpoint.ipynb  v2-Copy1-checkpoint.ipynb  v2-checkpoint.ipynb
backup/: README.md
src/meeting_copilot/: __init__.py  app.py  config.py
src/meeting_copilot/audio/: capture_loopback.py  capture_mic.py  ring_buffer.py  vad.py
src/meeting_copilot/llm/: client.py  model_catalog.py  prompts.py
src/meeting_copilot/stt/: watson_stt.py
src/meeting_copilot/tts/: edge_tts_client.py  ibm_tts.py
src/meeting_copilot/ui/: desktop_app.py
src/meeting_copilot/wakeword/: wakeword_text.py
